@startuml
scale 2
title "Connect 4 Class Interaction Diagram"
class Game {
}

class Turns {
}

class Screen {
}

class Piece {
}

class Spot {
}

class BoardIterator {
}

class Board {
}

class Color {
}

metaclass DrawMeta {
}

class Draw {
}

exception FullError {
}

exception MultiError {
}

Game --* Turns : uses
Game --* Board : uses
Game --* Screen : uses
Game --* Color : uses
Game --* Draw : uses
Game --* FullError : uses
Game --* MultiError : uses

Board --* BoardIterator : uses
Board --|> Screen : inherits
Board --* Piece : uses
Board --* Spot : uses
Board --* FullError : uses

Spot --* Piece : uses

DrawMeta <|-- Draw : <<metaclass>>

Draw --* Board : uses
Draw --* Screen : uses
Draw --* Spot : uses
Draw --* Color : uses
@enduml